src/rules/pyupgrade/snapshots/ruff__pyupgrade__tests__UP001_UP001.py.snap
---
source: src/pyupgrade/mod.rs
expression: checks
---
- kind:
    UselessMetaclassType: ~
  location:
    row: 2
    column: 4
  end_location:
    row: 2
    column: 24
  fix:
    content: pass
    location:
      row: 2
      column: 4
    end_location:
      row: 2
      column: 24
  parent: ~
- kind:
    UselessMetaclassType: ~
  location:
    row: 6
    column: 4
  end_location:
    row: 6
    column: 24
  fix:
    content: ""
    location:
      row: 6
      column: 0
    end_location:
      row: 7
      column: 0
  parent: ~

