src/rules/pyupgrade/snapshots/ruff__pyupgrade__tests__UP005_UP005.py.snap
---
source: src/pyupgrade/mod.rs
expression: checks
---
- kind:
    DeprecatedUnittestAlias:
      - assertEquals
      - assertEqual
  location:
    row: 6
    column: 8
  end_location:
    row: 6
    column: 25
  fix:
    content: self.assertEqual
    location:
      row: 6
      column: 8
    end_location:
      row: 6
      column: 25
  parent: ~
- kind:
    DeprecatedUnittestAlias:
      - assertEquals
      - assertEqual
  location:
    row: 7
    column: 8
  end_location:
    row: 7
    column: 25
  fix:
    content: self.assertEqual
    location:
      row: 7
      column: 8
    end_location:
      row: 7
      column: 25
  parent: ~
- kind:
    DeprecatedUnittestAlias:
      - failUnlessAlmostEqual
      - assertAlmostEqual
  location:
    row: 9
    column: 8
  end_location:
    row: 9
    column: 34
  fix:
    content: self.assertAlmostEqual
    location:
      row: 9
      column: 8
    end_location:
      row: 9
      column: 34
  parent: ~
- kind:
    DeprecatedUnittestAlias:
      - assertNotRegexpMatches
      - assertNotRegex
  location:
    row: 10
    column: 8
  end_location:
    row: 10
    column: 35
  fix:
    content: self.assertNotRegex
    location:
      row: 10
      column: 8
    end_location:
      row: 10
      column: 35
  parent: ~

