src/rules/pyupgrade/snapshots/ruff__pyupgrade__tests__UP013_UP013.py.snap
---
source: src/pyupgrade/mod.rs
expression: checks
---
- kind:
    ConvertTypedDictFunctionalToClass: MyType1
  location:
    row: 5
    column: 0
  end_location:
    row: 5
    column: 52
  fix:
    content: "class MyType1(TypedDict):\n    a: int\n    b: str"
    location:
      row: 5
      column: 0
    end_location:
      row: 5
      column: 52
  parent: ~
- kind:
    ConvertTypedDictFunctionalToClass: MyType2
  location:
    row: 8
    column: 0
  end_location:
    row: 8
    column: 50
  fix:
    content: "class MyType2(TypedDict):\n    a: int\n    b: str"
    location:
      row: 8
      column: 0
    end_location:
      row: 8
      column: 50
  parent: ~
- kind:
    ConvertTypedDictFunctionalToClass: MyType3
  location:
    row: 11
    column: 0
  end_location:
    row: 11
    column: 44
  fix:
    content: "class MyType3(TypedDict):\n    a: int\n    b: str"
    location:
      row: 11
      column: 0
    end_location:
      row: 11
      column: 44
  parent: ~
- kind:
    ConvertTypedDictFunctionalToClass: MyType4
  location:
    row: 14
    column: 0
  end_location:
    row: 14
    column: 30
  fix:
    content: "class MyType4(TypedDict):\n    pass"
    location:
      row: 14
      column: 0
    end_location:
      row: 14
      column: 30
  parent: ~
- kind:
    ConvertTypedDictFunctionalToClass: MyType5
  location:
    row: 17
    column: 0
  end_location:
    row: 17
    column: 46
  fix:
    content: "class MyType5(TypedDict):\n    a: \"hello\""
    location:
      row: 17
      column: 0
    end_location:
      row: 17
      column: 46
  parent: ~
- kind:
    ConvertTypedDictFunctionalToClass: MyType6
  location:
    row: 18
    column: 0
  end_location:
    row: 18
    column: 41
  fix:
    content: "class MyType6(TypedDict):\n    a: \"hello\""
    location:
      row: 18
      column: 0
    end_location:
      row: 18
      column: 41
  parent: ~
- kind:
    ConvertTypedDictFunctionalToClass: MyType7
  location:
    row: 21
    column: 0
  end_location:
    row: 21
    column: 56
  fix:
    content: "class MyType7(TypedDict):\n    a: NotRequired[dict]"
    location:
      row: 21
      column: 0
    end_location:
      row: 21
      column: 56
  parent: ~
- kind:
    ConvertTypedDictFunctionalToClass: MyType8
  location:
    row: 24
    column: 0
  end_location:
    row: 24
    column: 65
  fix:
    content: "class MyType8(TypedDict, total=False):\n    x: int\n    y: int"
    location:
      row: 24
      column: 0
    end_location:
      row: 24
      column: 65
  parent: ~
- kind:
    ConvertTypedDictFunctionalToClass: MyType9
  location:
    row: 27
    column: 0
  end_location:
    row: 27
    column: 55
  fix: ~
  parent: ~
- kind:
    ConvertTypedDictFunctionalToClass: MyType10
  location:
    row: 30
    column: 0
  end_location:
    row: 30
    column: 59
  fix:
    content: "class MyType10(TypedDict):\n    key: Literal[\"value\"]"
    location:
      row: 30
      column: 0
    end_location:
      row: 30
      column: 59
  parent: ~
- kind:
    ConvertTypedDictFunctionalToClass: MyType11
  location:
    row: 33
    column: 0
  end_location:
    row: 33
    column: 53
  fix:
    content: "class MyType11(typing.TypedDict):\n    key: int"
    location:
      row: 33
      column: 0
    end_location:
      row: 33
      column: 53
  parent: ~

