src/rules/pyupgrade/snapshots/ruff__pyupgrade__tests__UP021_UP021.py.snap
---
source: src/pyupgrade/mod.rs
expression: checks
---
- kind:
    ReplaceUniversalNewlines: ~
  location:
    row: 6
    column: 24
  end_location:
    row: 6
    column: 42
  fix:
    content: text
    location:
      row: 6
      column: 24
    end_location:
      row: 6
      column: 42
  parent: ~
- kind:
    ReplaceUniversalNewlines: ~
  location:
    row: 7
    column: 22
  end_location:
    row: 7
    column: 40
  fix:
    content: text
    location:
      row: 7
      column: 22
    end_location:
      row: 7
      column: 40
  parent: ~
- kind:
    ReplaceUniversalNewlines: ~
  location:
    row: 9
    column: 13
  end_location:
    row: 9
    column: 31
  fix:
    content: text
    location:
      row: 9
      column: 13
    end_location:
      row: 9
      column: 31
  parent: ~
- kind:
    ReplaceUniversalNewlines: ~
  location:
    row: 10
    column: 21
  end_location:
    row: 10
    column: 39
  fix:
    content: text
    location:
      row: 10
      column: 21
    end_location:
      row: 10
      column: 39
  parent: ~

