src/rules/pyupgrade/snapshots/ruff__pyupgrade__tests__UP025_UP025.py.snap
---
source: src/pyupgrade/mod.rs
expression: checks
---
- kind:
    RewriteUnicodeLiteral: ~
  location:
    row: 2
    column: 4
  end_location:
    row: 2
    column: 12
  fix:
    content: ""
    location:
      row: 2
      column: 4
    end_location:
      row: 2
      column: 5
  parent: ~
- kind:
    RewriteUnicodeLiteral: ~
  location:
    row: 4
    column: 0
  end_location:
    row: 4
    column: 8
  fix:
    content: ""
    location:
      row: 4
      column: 0
    end_location:
      row: 4
      column: 1
  parent: ~
- kind:
    RewriteUnicodeLiteral: ~
  location:
    row: 6
    column: 6
  end_location:
    row: 6
    column: 14
  fix:
    content: ""
    location:
      row: 6
      column: 6
    end_location:
      row: 6
      column: 7
  parent: ~
- kind:
    RewriteUnicodeLiteral: ~
  location:
    row: 8
    column: 6
  end_location:
    row: 8
    column: 14
  fix:
    content: ""
    location:
      row: 8
      column: 6
    end_location:
      row: 8
      column: 7
  parent: ~
- kind:
    RewriteUnicodeLiteral: ~
  location:
    row: 12
    column: 4
  end_location:
    row: 12
    column: 12
  fix:
    content: ""
    location:
      row: 12
      column: 4
    end_location:
      row: 12
      column: 5
  parent: ~
- kind:
    RewriteUnicodeLiteral: ~
  location:
    row: 12
    column: 14
  end_location:
    row: 12
    column: 22
  fix:
    content: ""
    location:
      row: 12
      column: 14
    end_location:
      row: 12
      column: 15
  parent: ~
- kind:
    RewriteUnicodeLiteral: ~
  location:
    row: 12
    column: 26
  end_location:
    row: 12
    column: 34
  fix:
    content: ""
    location:
      row: 12
      column: 26
    end_location:
      row: 12
      column: 27
  parent: ~
- kind:
    RewriteUnicodeLiteral: ~
  location:
    row: 12
    column: 38
  end_location:
    row: 12
    column: 46
  fix:
    content: ""
    location:
      row: 12
      column: 38
    end_location:
      row: 12
      column: 39
  parent: ~
- kind:
    RewriteUnicodeLiteral: ~
  location:
    row: 16
    column: 4
  end_location:
    row: 16
    column: 12
  fix:
    content: ""
    location:
      row: 16
      column: 4
    end_location:
      row: 16
      column: 5
  parent: ~
- kind:
    RewriteUnicodeLiteral: ~
  location:
    row: 17
    column: 4
  end_location:
    row: 17
    column: 16
  fix:
    content: ""
    location:
      row: 17
      column: 4
    end_location:
      row: 17
      column: 5
  parent: ~
- kind:
    RewriteUnicodeLiteral: ~
  location:
    row: 18
    column: 4
  end_location:
    row: 18
    column: 16
  fix:
    content: ""
    location:
      row: 18
      column: 4
    end_location:
      row: 18
      column: 5
  parent: ~
- kind:
    RewriteUnicodeLiteral: ~
  location:
    row: 19
    column: 4
  end_location:
    row: 19
    column: 20
  fix:
    content: ""
    location:
      row: 19
      column: 4
    end_location:
      row: 19
      column: 5
  parent: ~

